<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_icon"
    tools:context=".view.activity.RegisterActivity">


    <EditText
        android:id="@+id/register_ET_UID"
        style="@style/AppFontSize_25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/ichat_login_number"
        android:inputType="text"
        android:maxLength="20"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_ET_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="昵称"
        android:inputType="text"
        android:maxLength="30"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_ET_UID" />

    <RadioGroup
        android:id="@+id/register_RG_01"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_ET_nickname">

        <RadioButton
            android:id="@+id/register_RB_male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="男"
            android:checked="true"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/register_RB_female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="女" />
    </RadioGroup>


    <EditText
        android:id="@+id/register_ET_PASWD"
        style="@style/AppFontSize_25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/ichat_login_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_RG_01" />

    <EditText
        android:id="@+id/register_ET_CFPWD"
        style="@style/AppFontSize_25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="确认密码"
        android:inputType="textPassword"
        android:maxLength="20"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_ET_PASWD" />

    <LinearLayout
        android:id="@+id/register_LL"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/register_BTN_back"
            style="@style/AppFontSize_25"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#28ade1"
            android:text="返回"
            android:textColor="#fdfdfe"/>

        <Button
            android:id="@+id/register_BTN_regist"
            style="@style/AppFontSize_25"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#28ade1"
            android:text="@string/ichat_register"
            android:textColor="#fdfdfe"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>